# duckai-tools

./: .editorconfig  .gitignore  AGENTS.md  README.md
src/: duckai-tools.user.css
src/export-bookmarklet/: README.md  conversation.schema.json  export.schema.json  index.js
src/kb-shortcuts-userscript/: README.md  duckai-kb-shortcuts.user.js
src/quick-prompts-userscript/: README.md  duckai-quick-prompts.user.js  duckai-tools.user.css
src/quick-switch-userscript/: README.md  duckai-quick-switch.user.js
src/transcripts/: README.md  __main__.py  app.py  markdown_widgets.py  models.py  pyproject.toml  rendering.py  ui_helpers.py
src/transcripts/screens/: chat_list.py  chat_view.py  export_dialog.py  loading.py
src/transcripts/templates/: template.html  template.md
src/transcripts/tests/: test_async_loading.py  test_rendering.py  test_ui_helpers.py
